# sendDetections

./: .env.example  .gitignore  .windsurfrules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  REPORT.md  debug_log.json  debug_logging.py  detection_input_example.json  pyproject.toml  requirements.txt  sendDetection_script.py  sendDetections.py  senddetections.json.example  senddetections.yml.example  setup.py
archived_tests/: README.md  test_async_api_additional.py
docs/: Add detected IoCs to the Recorded Future Intelligence Cloud.txt  CollectiveInsightsAPI.txt  request_sample.py
sample/: sample_Proofpoint.csv  sample_common.csv  sample_fortigate_utm.csv  sample_tenable.csv
scripts/: csv_to_payload_json.py  run_tests.sh
sendDetections/: __init__.py  __main__.py  api_client.py  async_api_client.py  batch_processor.py  config.py  csv_converter.py  enhanced_api_client.py  error_analyzer.py  error_formatter.py  errors.py  exporters.py  logging_config.py  performance.py  validators.py  visualize.py
tests/: test_async_api.py  test_batch_processor.py  test_cli_config.py  test_cli_integration.py  test_cli_main.py  test_cli_main_additional.py  test_cli_organizations.py  test_cli_submit.py  test_config.py  test_edge_cases.py  test_enhanced_api.py  test_error_analyzer.py  test_exporters.py  test_mocks.py  test_performance.py  test_property_based.py  test_sendDetections.py  test_validators.py
