[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sendDetections"
version = "0.1.0"
description = "CSV to Recorded Future Detection API submission utility"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=0.21.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "tqdm>=4.65.0"
]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.80.0",
    "pylint>=2.15.0",
    "mypy>=1.0.0",
    "black>=23.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"